<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorBackground"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    tools:context=".ui.supervisor.SupervisorFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_help"
                style="@style/TextAppearance.Subtitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xlarge"
                android:layout_marginTop="@dimen/xxxlarge"
                android:layout_marginEnd="@dimen/xlarge"
                android:text="@string/lbl_request_roll"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_terminal_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/xlarge"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_help"
                app:endIconMode="clear_text">


                <com.google.android.material.textfield.TextInputEditText
                    android:textAlignment="viewStart"
                    android:id="@+id/et_terminal_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/lbl_terminal_number"
                    android:inputType="phone"
                    android:lines="1"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_receive_code"
                style="@style/Widget.Button.Large"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touchable_item_size"
                android:layout_margin="@dimen/xlarge"
                android:text="@string/lbl_request"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_terminal_number"
                app:layout_constraintVertical_bias="0.0" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>