<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/large"
    android:layoutDirection="rtl">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small"
        android:layoutDirection="rtl"
        app:cardCornerRadius="@dimen/large_elevation"
        app:cardElevation="@dimen/large_elevation"
        app:contentPadding="@dimen/large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/large_logo_size"
                android:layout_height="@dimen/large_logo_size"
                android:src="@drawable/ic_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_company_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_company_name"
                android:textSize="@dimen/text_xx_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_logo"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle1"/>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="شماره تلفن مرکز تماس "
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_company_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/large_image_size"
                style="@style/TextAppearance.Subtitle1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sep_phone_number"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_company_name"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/large_image_size"
                style="@style/TextAppearance.Subtitle2"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="وب سایت"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_phone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sep_website"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_phone"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle2"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ایمیل"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_website"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sep_email"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_website"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle2"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/lbl_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="اینستاگرام"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle1"
                />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_instagram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_sep_instagram"
                android:textSize="@dimen/text_x_large"
                app:layout_constraintTop_toBottomOf="@id/lbl_email"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/large"
                style="@style/TextAppearance.Subtitle2"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>